--- a/EECIP/Views/Account/Register.cshtml
+++ b/EECIP/Views/Account/Register.cshtml
@@ -88,16 +88,8 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse" aria-expanded="true" style="">
                 <div class="panel-body" style="max-height: 120px; overflow-y: scroll;">
-                    <p>
-                        The access and use of EECIP requires the creation of a user ID and password that I must maintain and keep confidential.
-                    </p>
-                    <p>
-                        <b>Privacy Statement</b>
-                        <br/>
-                        Personal identifying information you provide will be used for the expressed purpose of registration to this site and for updating and correcting agency information as necessary.
-                        This information will not be made available for other purposes unless required by law. Your information will not be sold or otherwise transferred to an outside third party.
-                    </p>
 
+                    <p>@Html.Raw(Model.termsConditions)</p>
                 </div>
             </div>
         </div>
