--- a/EECIP/Views/Admin/Settings.cshtml
+++ b/EECIP/Views/Admin/Settings.cshtml
@@ -4,46 +4,100 @@
     ViewBag.SubTitle = "Manage global application settings.";
 }
 
-<!-- render the main content -->
-<div class="row">
-    <div class="col-sm-12">
-        <section class="panel panel-default">
-            <div class="table-responsive">
-                <table class="table table-striped m-b-none" data-ride="datatables">
-                    <tr>
-                        <th>Edit</th>
-                        <th>Setting Name</th>
-                        <th>Setting Description</th>
-                        <th>Setting Value</th>
-                    </tr>
 
-                    @foreach (var item in Model.app_settings)
-                    {
-                        <tr>
-                            <td>
-                                <a href="#modal-form" class="btn btn-rounded btn-xs btn-info modal-it" data-toggle="modal"><i class="glyphicon glyphicon-pencil"></i></a>
-                                @Html.HiddenFor(modelItem => item.SETTING_IDX)
-                                @Html.HiddenFor(modelItem => item.SETTING_NAME)
-                                @if (item.ENCRYPT_IND != true)
-                                {
-                                @Html.HiddenFor(modelItem => item.SETTING_VALUE)
-                                }
-                                @Html.HiddenFor(modelItem => item.ENCRYPT_IND)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SETTING_NAME)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.SETTING_DESC)
-                            </td>
-                            <td>
-                                @(item.ENCRYPT_IND != true ? item.SETTING_VALUE : "*********************")
-                            </td>
-                        </tr>
-                    }
-                </table>
+<div class="panel-group accordion-custom accordion-teal" id="accordion">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true">
+                    General Settings
+                </a>
+            </h4>
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse in" aria-expanded="true" style="">
+            <div class="panel-body">
+
+
+                <!-- render the main content -->
+                <div class="row">
+                    <div class="col-sm-12">
+                        <section class="panel panel-default">
+                            <div class="table-responsive">
+                                <table class="table table-striped m-b-none" data-ride="datatables">
+                                    <tr>
+                                        <th>Edit</th>
+                                        <th>Setting Name</th>
+                                        <th>Setting Description</th>
+                                        <th>Setting Value</th>
+                                    </tr>
+
+                                    @foreach (var item in Model.app_settings)
+                        {
+                            <tr>
+                                <td>
+                                    <a href="#modal-form" class="btn btn-rounded btn-xs btn-info modal-it" data-toggle="modal"><i class="glyphicon glyphicon-pencil"></i></a>
+                                    @Html.HiddenFor(modelItem => item.SETTING_IDX)
+                                    @Html.HiddenFor(modelItem => item.SETTING_NAME)
+                                    @if (item.ENCRYPT_IND != true)
+                        {
+                            @Html.HiddenFor(modelItem => item.SETTING_VALUE)
+            }
+                                    @Html.HiddenFor(modelItem => item.ENCRYPT_IND)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SETTING_NAME)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SETTING_DESC)
+                                </td>
+                                <td>
+                                    @(item.ENCRYPT_IND != true ? item.SETTING_VALUE : "*********************")
+                                </td>
+                            </tr>
+            }
+                                </table>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
             </div>
-        </section>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false">
+                    Terms &amp; Conditions
+                </a>
+            </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+            <div class="panel-body">
+                @using (Html.BeginForm("CustomSettings", "Admin", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="form-group">
+                        @Html.EditorFor(model => model.TermsAndConditions)
+                        @Html.ValidationMessageFor(model => model.TermsAndConditions)
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button id="btnSave" type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -58,7 +112,7 @@
                     <div class="col-sm-12 ">
                         <h3 class="m-t-none m-b">Edit Setting</h3>
 
-                        @using (Html.BeginForm("Settings", "Admin", FormMethod.Post, new { @class = "" }))
+                        @using (Html.BeginForm("Settings", "Admin", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
                             @Html.HiddenFor(model => model.edit_app_setting.SETTING_IDX)
