--- a/EECIP/Views/Shared/_PartialHeadNotification.cshtml
+++ b/EECIP/Views/Shared/_PartialHeadNotification.cshtml
@@ -3,11 +3,11 @@
 @if (Model != null)
 {
     <li class="dropdown" style="float:left">
-        <a data-toggle="dropdown" @*data-hover="dropdown"*@ class="dropdown-toggle" data-close-others="true" href="#" aria-expanded="false">
+        <a data-toggle="dropdown" @*data-hover="dropdown"*@ class="dropdown-toggle" data-close-others="true" href="#" aria-expanded="false" title="Notifications">
             <i class="glyphicon glyphicon-alert"></i>
             @if (Model.NotifyCount > 0)
             {
-            <span class="badge"> @Model.NotifyCount</span>
+                <span class="badge"> @Model.NotifyCount</span>
             }
             else
             {
@@ -16,30 +16,32 @@
         </a>
         <ul class="dropdown-menu notifications">
             <li>
-                <span class="dropdown-menu-title"> You have @Model.NotifyCount notifications</span>
+                <span class="dropdown-menu-title"> You have @Model.NotifyCount unreead notifications</span>
             </li>
             <li>
                 <div class="drop-down-wrapper ps-container ps-theme-default ps-active-y" data-ps-id="78c70b6f-7c32-7407-aae8-406f18a26cd2">
                     <ul>
-@foreach (var item in Model.Notifications)
-{
-                        <li>
-                            <a href="javascript:void(0)">
-                                <span class="label label-primary"><i class="fa fa-user"></i></span>
-                                <span class="message"> @item.NOTIFY_TITLE </span>
-                                <span class="time"> @item.NOTIFY_DT</span>
-                            </a>
-                        </li>
-}
+                        @foreach (var item in Model.Notifications)
+                        {
+                            <li>
+                                <a href="@Url.Action("Notifications","Account")" >
+                                    <span class="label label-primary"><i class="glyphicon glyphicon-eye-open"></i></span>
+                                    <span class="message"> @item.NOTIFY_TITLE </span>
+                                    <span class="time"> @item.NOTIFY_DT</span>
+                                </a>
+                            </li>
+                        }
                     </ul>
                     <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px; height: 250px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 150px;"></div></div>
                 </div>
             </li>
             <li class="view-all">
-                <a href="@Url.Action("UserProfile","Account")">
+                <a href="@Url.Action("Notifications","Account")">
                     See all notifications <i class="fa fa-arrow-circle-o-right"></i>
                 </a>
             </li>
         </ul>
     </li>
+
+
 }
